# webcam-streamer

./: BUILDING.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
config/: known-cameras.json  mediamtx.yml
docs/adr/: 0001-supervisor-stays-user-session-host.md  0002-installer-checkbox-persists-as-hotplug-policy.md  0003-viewer-events-via-helper-exe-and-named-pipe.md
installer/: README.md  build-installer.ps1  setup.iss
scripts/: check-build-env.ps1  install-inno-setup.ps1  ipc-client.ps1  probe-camera.ps1  setup-deps.ps1  spike.ps1  verify-auth-fail.ps1  verify-end-to-end.ps1  verify-installer.ps1  verify-ipc-extras.ps1  verify-ipc.ps1  verify-modes.ps1  verify-settings.ps1  verify-spike.ps1  verify-stream-enable.ps1  verify-supervisor.ps1  verify-ui.ps1  verify-viewer-events.ps1
supervisor/: CMakeLists.txt
supervisor/src/: camera_config.cpp  camera_config.h  camera_enum.cpp  camera_enum.h  camera_formats.cpp  camera_formats.h  camera_probe.cpp  camera_probe.h  events_pipe.cpp  events_pipe.h  ipc_server.cpp  ipc_server.h  job_object.cpp  job_object.h  known_cameras.cpp  known_cameras.h  logging.cpp  logging.h  main.cpp  mtx_event_hook.cpp  process_supervisor.cpp  process_supervisor.h  run_command.cpp  run_command.h  settings.cpp  settings.h  strings.cpp  strings.h
ui/WebcamStreamerUi/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cs  AutostartHelper.cs  CameraInfo.cs  GlobalUsings.cs  IpcClient.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  Modes.cs  Native.cs  ResolutionFallbackConverter.cs  TrayIcon.cs  (+8 more)
